<?xml version="1.0" encoding="utf-8"?>

 <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/inp"
        android:inputType="text"
        android:hint="@string/bbb"
        android:digits="0123456789"
        android:maxLength="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn"
        android:text="@string/aaa"
        android:onClick="onClick"

        />



    <TextView
        android:id="@+id/txtout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:text="@string/ccc"
        android:gravity="center"
        android:layout_marginBottom="20dp"

        />





</LinearLayout>