<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <EditText
            android:id="@+id/inp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/hui"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/showOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="Hello"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn3_1"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/hui1"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn3_2"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:onClick="onClick"
            android:text="@string/hui2"
            android:textSize="25sp" />


        <Button
            android:id="@+id/btn3_3"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:onClick="onClick"
            android:text="@string/hui3"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn3_4"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:onClick="openOne"
            android:text="@string/hui4"
            android:textSize="25sp" />

    </LinearLayout>
    </android.support.constraint.ConstraintLayout>